...
                android:layout_marginTop="72dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateOfBIv"
                app:srcCompat="@drawable/ic_baseline_golf_course_24" />

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
...
                android:backgroundTint="#FFF1B212"
                android:entries="@array/countries"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/countryIv"
                app:layout_constraintTop_toBottomOf="@+id/mailEt"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
...
                app:layout_constraintStart_toEndOf="@+id/mailIv"
                app:layout_constraintTop_toBottomOf="@+id/phoneEt"
                tools:ignore="TouchTargetSizeCheck"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/addressEt"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/addressIv"
                app:layout_constraintTop_toBottomOf="@+id/countriesNames"
                android:importantForAutofill="no" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"

                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/genderIv"
                app:layout_constraintTop_toBottomOf="@+id/addressEt">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/act_register_radio_male"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

...
                    android:text="@string/act_register_radio_female"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/hobeyEt"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
...
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/hobbiesIv"
                app:layout_constraintTop_toBottomOf="@+id/dobTv"
                android:importantForAutofill="no" />


            <TextView
                android:id="@+id/dobTv"
                android:layout_width="0dp"
...
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toEndOf="@+id/dateOfBIv"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/schoolLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hobeyEt">
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_account_balance_24" />

                <Spinner
                    android:id="@+id/schoolSpinner1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:entries="@array/schoolArray"
                    android:layout_marginEnd="16dp"
                    android:popupBackground="#FFF1B212"
...
                    app:layout_constraintStart_toEndOf="@id/schoolIv1"
                    app:layout_constraintTop_toTopOf="parent">

                </Spinner>

                <EditText
                    android:id="@+id/percentage1"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:hint="@string/act_register_enter_percentage"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
...
                    app:layout_constraintStart_toStartOf="@+id/passwordEt"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEt"
                    android:importantForAutofill="no" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:text="@string/register"
...
