<resources>
    <string name="app_name">Assignment5_2</string>
    <string name="loginByEmail">Enter Email :</string>
    <string name="login_password">Enter password</string>
    <string name="login">login</string>
    <string name="password_hint">Password</string>
    <string name="show_hide_pwd">view</string>
    <string name="email_hint">Email</string>
    <string name="register">Register</string>
    <string name="act_register_user_name">User Name</string>
    <string name="act_register_contact_number">Contact Number</string>
    <string name="act_register_email">E-mail</string>
    <string name="act_register_address">Address</string>
    <string name="act_register_radio_male">Male</string>
    <string name="act_register_radio_female">Female</string>
    <string name="act_register_hobbies">Enter your Hobbies</string>
    <string name="act_register_dob">Select Date of Birth</string>
    <string name="act_register_enter_percentage">Enter percentage</string>
    <string name="act_register_enter_your_password">Enter your Password</string>
    <string name="act_register_confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="educational_details">Educational Details</string>


<!--    -->
    <string name="enter_email">Please enter your Email</string>
    <string name="enter_password">Please enter your Password</string>
...
