...
            android:layout_below="@+id/imageView_logo"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_main_head"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="238dp"
            android:layout_marginRight="70dp"
...
